Fix a package name of a dictionary of MeCab

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ addons:
     packages:
     - mecab
     - libmecab-dev
-    - mecab-ipadic-utf8
+    - unidic-mecab
     - git
     - make
     - curl
